[package]
name = "wordle_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["default_fonts", "glow"] }

iced = "0.12.1"

serde = { version = "1.0.198", features = ["derive"]}
itertools = "0.12.1"